# DataWineKedro

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/01_raw/: red-wine-quality-cortez-et-al-2009-metadata.json
data/02_intermediate/: wine_data.xlsx
data/03_primary/: model_input_data.xlsx
data/06_models/: best_model.pkl  best_random_forest_model.pkl
data/07_reporting/: best_model_evaluation_metrics.json
notebooks/: AcercaDatos.ipynb  Clasificacion_Calidad_Vino.ipynb  ETL.ipynb  ML_Árbol.ipynb
src/datawinekedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/datawinekedro/pipelines/data_ingestion/: nodes.py  pipeline.py
src/datawinekedro/pipelines/data_processing/: nodes.py  pipeline.py
src/datawinekedro/pipelines/model_training/: nodes.py  pipeline.py
